--- a/Yelp/Base.lproj/Main.storyboard
+++ b/Yelp/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="2xI-yr-O5N">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Bld-tX-Wpw">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Businesses View Controller-->
+        <!--Yelpify-->
         <scene sceneID="5L9-Uz-lNK">
             <objects>
                 <viewController id="2xI-yr-O5N" customClass="BusinessesViewController" customModule="Yelp" customModuleProvider="target" sceneMemberID="viewController">
@@ -20,12 +20,141 @@
                     <view key="view" contentMode="scaleToFill" id="XhR-oz-92f">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="wbw-Bg-dxF">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="BuisnessCell" rowHeight="137" id="an2-1l-78B" customClass="BuisnessCell" customModule="Yelp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="137"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="an2-1l-78B" id="7mw-qt-ytP">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="136.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="spT-9y-3cN">
+                                                    <rect key="frame" x="11" y="11" width="80" height="80"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="80" id="4g0-nC-U4F"/>
+                                                        <constraint firstAttribute="width" constant="80" id="BZw-dN-zkv"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="1. Grand Huh Bah" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YyY-hd-GBJ">
+                                                    <rect key="frame" x="99" y="10" width="158" height="23"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Thai, Seafood, Salad" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YPb-Jb-P45">
+                                                    <rect key="frame" x="98" y="83" width="131" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
+                                                    <color key="textColor" red="0.55047765544041449" green="0.55047765544041449" blue="0.55047765544041449" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="0.007 mi" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uFf-jP-5d4">
+                                                    <rect key="frame" x="312" y="14.5" width="55" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
+                                                    <color key="textColor" red="0.55047765544041449" green="0.55047765544041449" blue="0.55047765544041449" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="F22-BB-W1M">
+                                                    <rect key="frame" x="98" y="44" width="83" height="15"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="83" id="1ha-bz-ToO"/>
+                                                        <constraint firstAttribute="height" constant="15" id="5W6-fS-w7F"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="88 Division st Mission bay" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="voQ-Ap-OAE">
+                                                    <rect key="frame" x="98" y="63" width="269" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$$" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cg2-93-kGF">
+                                                    <rect key="frame" x="349" y="46" width="18" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
+                                                    <color key="textColor" red="0.55047765544041449" green="0.55047765544041449" blue="0.55047765544041449" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reviews" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BJ5-5a-A4y">
+                                                    <rect key="frame" x="200" y="43" width="53" height="17"/>
+                                                    <accessibility key="accessibilityConfiguration" label="Reviews"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
+                                                    <color key="textColor" red="0.55047765540000004" green="0.55047765540000004" blue="0.55047765540000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="spT-9y-3cN" firstAttribute="top" secondItem="7mw-qt-ytP" secondAttribute="top" constant="11" id="3Jo-pB-7Dj"/>
+                                                <constraint firstItem="uFf-jP-5d4" firstAttribute="top" secondItem="7mw-qt-ytP" secondAttribute="top" constant="14.5" id="Cop-pb-kaX"/>
+                                                <constraint firstAttribute="trailing" secondItem="Cg2-93-kGF" secondAttribute="trailing" constant="8" id="Dur-yU-OpV"/>
+                                                <constraint firstItem="F22-BB-W1M" firstAttribute="top" secondItem="YyY-hd-GBJ" secondAttribute="bottom" constant="11" id="FGP-6Q-dtz"/>
+                                                <constraint firstItem="YyY-hd-GBJ" firstAttribute="top" secondItem="7mw-qt-ytP" secondAttribute="top" constant="10" id="H0J-jE-pAt"/>
+                                                <constraint firstItem="Cg2-93-kGF" firstAttribute="top" secondItem="uFf-jP-5d4" secondAttribute="bottom" constant="14.5" id="HY7-cU-E6x"/>
+                                                <constraint firstItem="YPb-Jb-P45" firstAttribute="leading" secondItem="voQ-Ap-OAE" secondAttribute="leading" id="JnJ-du-u5P"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="spT-9y-3cN" secondAttribute="bottom" constant="12" id="PcF-SH-vU2"/>
+                                                <constraint firstItem="BJ5-5a-A4y" firstAttribute="centerY" secondItem="F22-BB-W1M" secondAttribute="centerY" id="SWh-Ge-XS7"/>
+                                                <constraint firstItem="voQ-Ap-OAE" firstAttribute="top" secondItem="BJ5-5a-A4y" secondAttribute="bottom" constant="3" id="U4u-ez-Cfp"/>
+                                                <constraint firstItem="uFf-jP-5d4" firstAttribute="leading" secondItem="YyY-hd-GBJ" secondAttribute="trailing" constant="55" id="d9O-Cp-Eua"/>
+                                                <constraint firstItem="YPb-Jb-P45" firstAttribute="top" secondItem="voQ-Ap-OAE" secondAttribute="bottom" constant="3" id="exA-JM-rwr"/>
+                                                <constraint firstItem="spT-9y-3cN" firstAttribute="leading" secondItem="7mw-qt-ytP" secondAttribute="leading" constant="11" id="hcR-mV-29X"/>
+                                                <constraint firstAttribute="trailing" secondItem="uFf-jP-5d4" secondAttribute="trailing" constant="8" id="igq-Ke-HUt"/>
+                                                <constraint firstItem="BJ5-5a-A4y" firstAttribute="leading" secondItem="F22-BB-W1M" secondAttribute="trailing" constant="19" id="nJl-zE-ciM"/>
+                                                <constraint firstItem="voQ-Ap-OAE" firstAttribute="leading" secondItem="spT-9y-3cN" secondAttribute="trailing" constant="7" id="nPV-g4-NpN"/>
+                                                <constraint firstItem="voQ-Ap-OAE" firstAttribute="top" secondItem="F22-BB-W1M" secondAttribute="bottom" constant="4" id="nXU-Uw-EGS"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="YPb-Jb-P45" secondAttribute="bottom" id="php-9i-TZp"/>
+                                                <constraint firstItem="YyY-hd-GBJ" firstAttribute="leading" secondItem="spT-9y-3cN" secondAttribute="trailing" constant="8" id="rpK-dc-oEm"/>
+                                                <constraint firstAttribute="trailing" secondItem="voQ-Ap-OAE" secondAttribute="trailing" constant="8" id="tSb-w3-Kys"/>
+                                                <constraint firstItem="F22-BB-W1M" firstAttribute="leading" secondItem="spT-9y-3cN" secondAttribute="trailing" constant="7" id="ta6-9R-QPV"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="adressLabel" destination="voQ-Ap-OAE" id="7tb-1S-zT6"/>
+                                            <outlet property="distanceLabel" destination="uFf-jP-5d4" id="lcM-hM-lB0"/>
+                                            <outlet property="foodTypeLabel" destination="YPb-Jb-P45" id="KB0-q0-Bwj"/>
+                                            <outlet property="ratingImageView" destination="F22-BB-W1M" id="Mey-ru-j55"/>
+                                            <outlet property="ratingLabel" destination="BJ5-5a-A4y" id="X26-yp-y27"/>
+                                            <outlet property="thumbImageView" destination="spT-9y-3cN" id="QgV-7I-pPf"/>
+                                            <outlet property="titleNameLabel" destination="YyY-hd-GBJ" id="WoK-37-cXV"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="wbw-Bg-dxF" secondAttribute="trailing" id="22p-9m-4lP"/>
+                            <constraint firstItem="wbw-Bg-dxF" firstAttribute="leading" secondItem="XhR-oz-92f" secondAttribute="leading" id="eK9-nT-fHr"/>
+                            <constraint firstItem="VBY-gq-v8E" firstAttribute="top" secondItem="wbw-Bg-dxF" secondAttribute="bottom" id="lG5-RO-u1x"/>
+                            <constraint firstItem="wbw-Bg-dxF" firstAttribute="top" secondItem="XhR-oz-92f" secondAttribute="top" id="mIx-u6-b3d"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Yelpify" id="xDl-kF-dXQ"/>
+                    <connections>
+                        <outlet property="tableView" destination="wbw-Bg-dxF" id="ghy-fb-X1m"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fgb-4b-F1b" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1788" y="358"/>
+            <point key="canvasLocation" x="2727.1999999999998" y="357.57121439280365"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="jNz-HK-SB0">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Bld-tX-Wpw" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="dMP-fq-E96">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="2xI-yr-O5N" kind="relationship" relationship="rootViewController" id="R3m-z5-xRY"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ap7-9W-fDE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1788" y="357.57121439280365"/>
         </scene>
     </scenes>
 </document>
